footer text-align bugfix

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -1309,7 +1309,7 @@ input[type="radio"]:checked ~ .quiz__image {
 	justify-content: flex-start;
 }
 
-.footer_info {
+.footer_right {
 	align-items: flex-end;
 	text-align: right;
 
